--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <container class="upper-part">
     <div class="upper-part-left">
         <video  autoplay loop>
-          <source src="video.mp4" type="video/mp4">
+          <source src="video.mp4" type="video/mp4"></source>
           Your browser does not support HTML5 video.
         </video>
     </div>
