--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- UPPER PART -->
   <container class="upper-part">
     <div class="upper-part-left">
-        <video  autoplay loop>
+        <video  mute autoplay loop>
           <source src="video.mp4" type="video/mp4"></source>
           Your browser does not support HTML5 video.
         </video>
