--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <!-- UPPER PART -->
   <container class="upper-part">
     <div class="upper-part-left">
-        <video  mute autoplay loop>
+            <video playsinline="" loop="loop" muted autoplay="autoplay">
+                <source src="/video.mp4" type="video/mp4">
+                
           <source src="video.mp4" type="video/mp4"></source>
           Your browser does not support HTML5 video.
         </video>
