fixed nav bar and video

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
   <title>Outlaw Landing Page</title>
@@ -48,8 +49,10 @@
   
   <container class="middle-part">
     <div class="left-img">
-      <img src="https://d3k81ch9hvuctc.cloudfront.net/company/zzwj2k/images/9149b460-762e-40ca-b766-ac20b8ce5b43.jpeg" alt="">
-    </div>
+      <a href="https://zinvowatches.com/pages/outlaw-vid2?_ke=eyJrbF9lbWFpbCI6ICJhbmFzdGFzaWlhc2hueXRAZ21haWwuY29tIiwgImtsX2NvbXBhbnlfaWQiOiAienp3ajJrIn0%3D">
+        <img src="https://d3k81ch9hvuctc.cloudfront.net/company/zzwj2k/images/9149b460-762e-40ca-b766-ac20b8ce5b43.jpeg" alt="">
+      </a>
+      </div>
     <div class="right-img">
       <img src="https://i.postimg.cc/SRW64w1G/Outlaw-shadow-1-3x.png" alt="">
     </div>
