fixed logo on nav

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="nav-middle">
       <a href="#"><div class="logo">
-      <img src="https://i.postimg.cc/KzbcVwLb/zinvo-logo.png" alt="logo">
+      <img src="https://i.postimg.cc/kG9TLH03/zinvo-logo-10x.png" alt="logo">
       </div></a>
     </div>
     <div class="nav-right">
