--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
         <ul>
           <h3><img src="https://i.postimg.cc/KzbcVwLb/zinvo-logo.png" alt=""></h3>
           <li><a href="">info@zinvowatches.com</a></li>
-          <li>+1(404)371-0403</li>
-          <li>12130 Millenium Dr</li>
-          <li>Los Angeles, CA 90094</li>
+          <li><a href="tel:1(404)371-0403">+1(404)371-0403</a></li>
+          <li><a href="https://www.google.com/maps/place/12130+Millennium+Dr,+Los+Angeles,+CA+90094/@33.9799823,-118.4085495,17z/data=!3m1!4b1!4m5!3m4!1s0x80c2b0a5c0953c21:0x28697024a56c4491!8m2!3d33.9799823!4d-118.4063608">12130 Millenium Dr<br>Los Angeles, CA 90094</a></li>
         </ul>
       </div>
       <div class="shop-links">
